erDiagram
    DOCTOR_CONSULTATION {
        bigint id PK
        varchar consultation_no UK
        bigint user_id FK
        bigint doctor_id FK
        bigint report_id FK
        varchar source_type
        varchar consultation_type
        varchar consultation_title
        text consultation_content
        tinyint consultation_status
        tinyint priority_level
    }

    DOCTOR_CONSULTATION_REPLY {
        bigint id PK
        bigint consultation_id FK
        varchar consultation_no
        varchar reply_role
        bigint reply_user_id
        varchar reply_user_name
        text reply_content
        varchar attachment_url
        datetime reply_time
    }

    USER ||--o{ DOCTOR_CONSULTATION : "发起咨询"
    EXAM_REPORT ||--o{ DOCTOR_CONSULTATION : "关联报告"
    DOCTOR_CONSULTATION ||--o{ DOCTOR_CONSULTATION_REPLY : "回复消息"
    STAFF_ACCOUNT ||--o{ DOCTOR_CONSULTATION : "医生回复"
